Changes for Perl extension Perl-Dist-WiX

1.200_100   Xxx ## Xxx 2010
    2. Perl 5.12.1 support added.
	3. Optional Growl for Windows support added during building.

1.200001   Thu 06 May 2010
    1. Used to build Bootstrap Perl "April" 2010.
    2. Used to build Strawberry Perl 5.12.0.1.
    3. Requires version of Win32::Exe that has 64-bit support.
       (should have been in 1.200)
    4. Fixing small bugs in checkpointing.

1.200   Sat 01 May 2010
    1. Documentation cleanup (including adding when required).
    2. Supports 5.12.0 final. Removes 5.11.5 support.
    3. Used to build Strawberry Perl April 2010.
    4. Checkpointing works again.
    5. .tar.bz2 files are now usable as parameters to this module.
    6. (beta, untested) .tar.xz file support has also been added.
    7. A relocation custom action has been added.

1.102_102   Thu 25 Mar 2010
    1. Adding 5.12.0 support (based on 5.12.0-RC0 for now).
    2. Bug fixes to relocation support.
    3. Used to build Strawberry Perl April 2010 Beta 1
       (5.12.x versions).

1.102_101   Sat 20 Mar 2010
    1. Scripts now will go to perl/site/bin.
    2. perl 5.11.5 support is added.
    3. Relocation script written in perl has been added.
    4. Change $Config{installsitebin} from perl/bin to perl/site/bin,
       and add perl/site/bin to the path.
    5. Used to build Strawberry Perl April 2010 Beta 1
       (5.8.x/5.10.x versions).

1.102_100   Fri 19 Feb 2010
    1. Used to build Strawberry Perl Professional 5.10.1.1 Alpha 1.
    2. Allow more than one DISTRIBUTIONS.txt file.

1.102002   Sat 30 Jan 2010
    1. Allow use of previously created merge modules.
    2. Removal of MooseX::AttributeHelpers as a
       prerequisite.

1.102001   Fri 29 Jan 2010
    1. Changes to get Bootstrap to build.

1.102   Thu 28 Jan 2010
    1. Used to build Strawberry Perl January 2010.
    2. Fix problems with merge module
    3. Make updating "smart" - don't delete the site
       directory unless doing a major upgrade.